--- a/app/views/users/finish_signup.html.erb
+++ b/app/views/users/finish_signup.html.erb
@@ -58,7 +58,7 @@
                     <div class="row">
                         <div class="two-thirds column">
                             <%= f.label :birthday, 'Fødselsdato:', class: 'u-full-width' %>
-                            <%= f.date_select :birthday, start_year:  18.years.ago.year, end_year: 110.years.ago.year, disabled: @user.has_confirmed_id? %>
+                            <%= f.date_select :birthday, start_year:  18.years.ago.year, end_year: 110.years.ago.year, default: 18.years.ago.beginning_of_year, disabled: @user.has_confirmed_id? %>
                         </div>
                     </div>
                 <%# end %>
