Update prosa about us page

--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -5,8 +5,8 @@
 
     <p>
         Det er gratis å legge ut annonser, alle brukere blir verifisert og
-        betaling utføres trygt gjennom tjenesten. Alt som leies ut på Plendit blir forsikret av If Skadeforsikring. For å sikre en
-        god brukeropplevelse gir både utleier og leietaker hverandre en rating etter leieforholdet er over.
+        betaling utføres trygt gjennom tjenesten. Alt som leies ut på Plendit er forsikret av If Skadeforsikring. For å sikre en
+        god brukeropplevelse, gir både utleier og leietaker hverandre en rating etter leieforholdet er over.
     </p>
 <% end %>
 
@@ -18,16 +18,17 @@
 
 <%= render layout: 'gray_box', locals: {title: 'Bakgrunn'} do %>
     <p>
-        Vi som har startet Plendit er til daglig ansatte i FINN.no. 
-        I 2014 ble FINN Torget gratis for privatannonsører, bare kort tid etter det lå det tusenvis annnonser ute der folk ønsket å leie ut tingene sine. 
-        FINN Torget er en tjeneste for kjøp og salg og er derfor ikke tilrettelagt for denne typen aktivitet. 
-        Det var rett og slett ikke trygt å leie ut eiendelene sine til vilt fremmede mennesker uten noen form for sikkerhet. 
+        Vi startet Plendit er til daglig ansatte i FINN.no. 
+        I 2014 ble FINN Torget gratis for privatannonsører og det ble i løpet av kort tid publisert tusenvis av annonser med ting til leie. 
+        FINN Torget er en tjeneste for kjøp og salg og ikke tilrettelagt for utleie. 
+        Det er rett og slett ikke trygt eller optimalt å leie ut eiendelene sine via FINN Torget.
     </p>
     
      <p>
-        Det var åpenbart at brukere på FINN ønsket en slik tjeneste, men hvordan kan vi gjøre det trygt? 
-        Det var slik Plendit ble til! Vi satte i gang med å utvikle en tjeneste der utleie mellom folk ble både trygt og enkelt. 
-        Gjennom avansert verifisering av alle brukere, sikker betaling og forsikring har Plendit.no blitt nettopp en slik tjeneste. 
+        Til tross for utfordringer, var det likevel åpenbart at brukere på FINN ønsket en tjeneste for utleie. Og slik ble Plendit til.
+        Det store spørsmålet var hvordan gjøre dette enkelt og trygt.
+         Vi satte i gang med å utvikle Plendit i det håp om å lage en tjeneste der utleie mellom folk skulle gi en god opplevelse i alle ledd. 
+        Gjennom avansert verifisering av alle brukere, sikker betaling og en god forsikring har Plendit.no blitt en trygg og sikker markedsplass for både utleier og leietaker. 
     </p>  
     
     <p>
