Forgot a word - About us

--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -18,7 +18,7 @@
 
 <%= render layout: 'gray_box', locals: {title: 'Bakgrunn'} do %>
     <p>
-        Vi startet Plendit er til daglig ansatte i FINN.no. 
+        Vi som startet Plendit er til daglig ansatte i FINN.no. 
         I 2014 ble FINN Torget gratis for privatannonsører og det ble i løpet av kort tid publisert tusenvis av annonser med ting til leie. 
         FINN Torget er en tjeneste for kjøp og salg og ikke tilrettelagt for utleie. 
         Det er rett og slett ikke trygt eller optimalt å leie ut eiendelene sine via FINN Torget.
