Fixed some padding in emails

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -785,13 +785,6 @@ font-style: normal;font-weight: 400;margin-bottom: 24px;margin-top: 0px;font-siz
                   <table class="contents" style="border-collapse: collapse;border-spacing: 0;table-layout: fixed;width: 100%;">
                     <tbody>
                       <tr>
-                        <td class="padded" style="padding: 0;vertical-align: top;padding-left: 32px;padding-right: 32px;word-break: break-word;word-wrap: break-word;"><div style="line-height:15px;font-size:1px">&nbsp;</div></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                  <table class="contents" style="border-collapse: collapse;border-spacing: 0;table-layout: fixed;width: 100%;">
-                    <tbody>
-                      <tr>
                         <td class="padded" style="padding: 0;vertical-align: top;padding-left: 32px;padding-right: 32px;word-break: break-word;word-wrap: break-word;">
 
                             <%= yield %>
@@ -800,6 +793,9 @@ font-style: normal;font-weight: 400;margin-bottom: 24px;margin-top: 0px;font-siz
                       </tr>
                     </tbody>
                   </table>
+
+                    <div class="column-bottom" style="font-size: 32px;line-height: 32px;transition-timing-function: cubic-bezier(0, 0, 0.2, 1);transition-duration: 150ms;transition-property: all;">&nbsp;</div>
+                  </div>
                 </td>
               </tr>
             </tbody>
