--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -818,7 +818,7 @@ font-style: normal;font-weight: 400;margin-bottom: 24px;margin-top: 0px;font-siz
                   <div class="permission" style='font-family: "Lato",sans-serif; font-size: 12px;'>
                     <div>Du mottar denne E-posten fordi du er bruker p&#229; Plendit.no</div>
                   </div>
-                  <div class="campaign" style='font-family: "Lato",sans-serif;margin-bottom: 18px; font-size: 12px;'> <span> <a style="transition: opacity 0.2s ease-in;color: #FFF;font-weight: bold;text-decoration: none;" href="http://dev.plendit.com/terms">Brukervilkår</a> &nbsp;&nbsp;|&nbsp;&nbsp; </span> <a style="transition: opacity 0.2s ease-in;color: #FFF;font-weight: bold;text-decoration: none;" href="http://dev.plendit.com/me">Rediger varslinger</a> </div></td>
+                  <div class="campaign" style='font-family: "Lato",sans-serif;margin-bottom: 18px; font-size: 12px;'> <span> <a style="transition: opacity 0.2s ease-in;color: #FFF;font-weight: bold;text-decoration: none;" href="http://dev.plendit.com/terms">Brukervilkår</a>  </div></td>
               </tr>
             </tbody>
           </table></td>
