Update about again.

--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -20,15 +20,15 @@
     <p>
         Vi som startet Plendit er til daglig ansatte i FINN.no. 
         I 2014 ble FINN Torget gratis for privatannonsører og det ble i løpet av kort tid publisert tusenvis av annonser med ting til leie. 
-        FINN Torget er en tjeneste for kjøp og salg og ikke tilrettelagt for utleie. 
-        Det er rett og slett ikke trygt eller optimalt å leie ut eiendelene sine via FINN Torget.
+        FINN Torget er en tjeneste laget for kjøp og salg og er dermed ikke tilrettelagt for utleie. 
+        Rammeverket man er avhengig av for å støtte denne typen aktivitet, er rett og slett ikke tilstede på FINN. 
     </p>
     
      <p>
-        Til tross for utfordringer, var det likevel åpenbart at brukere på FINN ønsket en tjeneste for utleie. Og slik ble Plendit til.
+        Til tross for utfordringer, var det likevel åpenbart at brukere på FINN ønsket en tjeneste for privatutleie. Og slik ble Plendit til.
         Det store spørsmålet var hvordan gjøre dette enkelt og trygt.
          Vi satte i gang med å utvikle Plendit i det håp om å lage en tjeneste der utleie mellom folk skulle gi en god opplevelse i alle ledd. 
-        Gjennom avansert verifisering av alle brukere, sikker betaling og en god forsikring har Plendit.no blitt en trygg og sikker markedsplass for både utleier og leietaker. 
+        Gjennom avansert verifisering av alle brukere, sikker betaling og en god forsikring, har Plendit.no blitt en trygg og sikker markedsplass for både utleier og leietaker. 
     </p>  
     
     <p>
