--- a/app/views/payin_rules/_ad_price_estimate.html.erb
+++ b/app/views/payin_rules/_ad_price_estimate.html.erb
@@ -1,6 +1,6 @@
 <div class="ad-price-estimate">
     <% if @payin_rule.errors.any? %>
-        TRANSLATEME: Det er ikke mulig å ha den pris, pga:
+        Dette er en ugyldig pris:
         <ul>
             <% @payin_rule.errors.each do |attribute,message| %>
                 <li><%= message %></li>
@@ -15,9 +15,6 @@
         </div>
         <div class="main-price__row">
             <i>Inkluderer forsikring opp til </i>
-            <i>
-                <%= format_monetary_full_pretty( @ad.booking_calculator.max_insurance_coverage(@ad.main_payin_rule) ) %>
-            </i>
         </div>
         <div class="main-price__row">
             <strong class="main-price__label">Utbetalt til deg per dag: </strong>
