--- a/app/views/payin_rules/_ad_price_estimate.html.erb
+++ b/app/views/payin_rules/_ad_price_estimate.html.erb
@@ -14,7 +14,7 @@
             </span>
         </div>
         <div class="main-price__row">
-            <i>Inkluderer forsikring opp til </i>
+            <i>Inkluderer forsikring</i>
         </div>
         <div class="main-price__row">
             <strong class="main-price__label">Utbetalt til deg per dag: </strong>
