--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -5,8 +5,7 @@
 
     <p>
         Det er gratis å legge ut annonser, alle brukere blir verifisert og
-        betaling utføres trygt gjennom tjenesten. Alt som leies ut på Plendit er forsikret av If Skadeforsikring. For å sikre en
-        god brukeropplevelse, gir både utleier og leietaker hverandre en rating etter leieforholdet er over.
+        betaling utføres trygt gjennom tjenesten. Alt som leies ut på Plendit er forsikret av If Skadeforsikring og du har som utleier ingen egenandel.
     </p>
 <% end %>
 
@@ -28,7 +27,7 @@
         Til tross for utfordringer, var det likevel åpenbart at brukere på FINN ønsket en tjeneste for privatutleie. Og slik ble Plendit til.
         Det store spørsmålet var hvordan gjøre dette enkelt og trygt.
          Vi satte i gang med å utvikle Plendit i det håp om å lage en tjeneste der utleie mellom folk skulle gi en god opplevelse i alle ledd. 
-        Gjennom avansert verifisering av alle brukere, sikker betaling og en god forsikring, har Plendit.no blitt en trygg og sikker markedsplass for både utleier og leietaker. 
+        Gjennom avansert verifisering av alle brukere, sikker betaling og forsikring, har Plendit.no blitt en trygg og sikker markedsplass for både utleier og leietaker. 
     </p>  
     
     <p>
