Some small changes

--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -27,7 +27,7 @@
         Til tross for utfordringer, var det likevel åpenbart at brukere på FINN ønsket en tjeneste for privatutleie. Og slik ble Plendit til.
         Det store spørsmålet var hvordan gjøre dette enkelt og trygt.
          Vi satte i gang med å utvikle Plendit i det håp om å lage en tjeneste der utleie mellom folk skulle gi en god opplevelse i alle ledd. 
-        Gjennom avansert verifisering av alle brukere, sikker betaling og forsikring, har Plendit.no blitt en trygg og sikker markedsplass for både utleier og leietaker. 
+        Gjennom avansert verifisering av alle brukere, sikker betaling og gode forsikringer, har Plendit.no blitt en trygg markedsplass for både utleier og leietaker. 
     </p>  
     
     <p>
