--- a/app/views/users/private_profile.html.erb
+++ b/app/views/users/private_profile.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="eight columns">
 
-            <% if @user.phone_pending_confirmation? || @user.unconfirmed_phone_number.blank?  %>
+            <% if @user.phone_pending_confirmation? || @user.unconfirmed_phone_number.present?  %>
                 <%= render partial: 'verify_sms' %>
             <% end %>
 
