--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -738,23 +738,17 @@ font-style: normal;font-weight: 400;margin-bottom: 24px;margin-top: 0px;font-siz
   <body class="mso">
 <![endif]-->
 <!--[if !mso]><!-->
-<body class="full-padding" style="margin: 0;padding: 0;min-width: 100%;background-color: #2a96ff;">
+<body class="full-padding" style="margin: 0;padding: 0;min-width: 100%;">
 <!--<![endif]-->
-<center class="wrapper" style="display: table;table-layout: fixed;width: 100%;min-width: 620px;-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;background-color: #2a96ff;">
-  <table class="header centered" style="border-collapse: collapse;border-spacing: 0;margin-left: auto;margin-right: auto;width: 600px;">
+<center class="wrapper" style="display: table;table-layout: fixed;width: 100%;min-width: 620px;-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;">
+  <table class="header centered" style="border-collapse: collapse;border-spacing: 0;margin-left: auto;margin-right: auto;width: 100%;background-color: #2a96ff;">
     <tbody>
       <tr>
-        <td style="padding: 0;vertical-align: top;"><table class="preheader" style="border-collapse: collapse;border-spacing: 0;" align="right">
-            <tbody>
-              <tr>
-                <td class="emb-logo-padding-box" style="padding: 0;vertical-align: top;padding-bottom: 24px;padding-top: 24px;text-align: right;width: 280px;letter-spacing: 0.01em;line-height: 17px;font-weight: 400;font-size: 11px;"><div class="spacer" style="font-size: 1px;line-height: 2px;width: 100%;">&nbsp;</div></td>
-              </tr>
-            </tbody>
-          </table>
+        <td style="padding: 0;vertical-align: top;">
           <table style="border-collapse: collapse;border-spacing: 0;" align="left">
             <tbody>
               <tr>
-                <td class="logo emb-logo-padding-box" style="padding: 0;vertical-align: top;mso-line-height-rule: at-least;width: 280px;padding-top: 24px;padding-bottom: 24px;">
+                <td class="logo emb-logo-padding-box" style="padding: 0;vertical-align: top;mso-line-height-rule: at-least;width: 280px;padding-top: 24px;padding-bottom: 24px;padding-left:24px">
                   <div class="logo-left" style="font-weight: 700;font-family: Avenir,sans-serif;color: #555;font-size: 0px !important;line-height: 0 !important;" align="left" id="emb-email-header">
                     <%= image_tag attachments['logo.png'].url, size: '200x50', alt: '', style:'border: 0;-ms-interpolation-mode: bicubic;display: block;max-width: 200px;" src="plendit.png' -%>
                   </div>
@@ -765,24 +759,25 @@ font-style: normal;font-weight: 400;margin-bottom: 24px;margin-top: 0px;font-siz
       </tr>
     </tbody>
   </table>
-  <table class="border" style="border-collapse: collapse;border-spacing: 0;font-size: 1px;line-height: 1px;background-color: #2687e6;margin-left: auto;margin-right: auto;" width="602">
+  <table class="border" style="border-collapse: collapse;border-spacing: 0;font-size: 1px;line-height: 1px;background-color: #ffffff;margin-left: auto;margin-right: auto;" width="602">
     <tbody>
       <tr>
         <td style="padding: 0;vertical-align: top;">&#8203;</td>
       </tr>
     </tbody>
   </table>
-  <table class="centered" style="border-collapse: collapse;border-spacing: 0;margin-left: auto;margin-right: auto;">
+  <table class="centered" style="border-collapse: collapse;border-spacing: 0;margin-left: auto;margin-right: auto;background-color: #ffffff;">
     <tbody>
       <tr>
-        <td class="border" style="padding: 0;vertical-align: top;font-size: 1px;line-height: 1px;background-color: #2687e6;width: 1px;">&#8203;</td>
-        <td style="padding: 0;vertical-align: top;"><table class="one-col" style="border-collapse: collapse;border-spacing: 0;margin-left: auto;margin-right: auto;width: 600px;background-color: #ffffff;table-layout: fixed;" emb-background-style>
+        <td class="border" style="padding: 0;vertical-align: top;font-size: 1px;line-height: 1px;width: 1px;background-color: #ffffff;">&#8203;</td>
+        <td style="padding: 0;vertical-align: top;">
+        <table class="one-col" style="border-collapse: collapse;border-spacing: 0;margin-left: auto;margin-right: auto;width: 600px;background-color: #ffffff;table-layout: fixed;" emb-background-style>
             <tbody>
               <tr>
                 <td class="column" style="padding: 0;vertical-align: top;text-align: left;"><div>
                     <div class="column-top" style="font-size: 32px;line-height: 32px;transition-timing-function: cubic-bezier(0, 0, 0.2, 1);transition-duration: 150ms;transition-property: all;">&nbsp;</div>
                   </div>
-                  <table class="contents" style="border-collapse: collapse;border-spacing: 0;table-layout: fixed;width: 100%;">
+                  <table class="contents" style="border-collapse: collapse;border-spacing: 0;table-layout: fixed;width: 100%;background-color: #ffffff;">
                     <tbody>
                       <tr>
                         <td class="padded" style="padding: 0;vertical-align: top;padding-left: 32px;padding-right: 32px;word-break: break-word;word-wrap: break-word;">
@@ -799,26 +794,27 @@ font-style: normal;font-weight: 400;margin-bottom: 24px;margin-top: 0px;font-siz
                 </td>
               </tr>
             </tbody>
-          </table></td>
-        <td class="border" style="padding: 0;vertical-align: top;font-size: 1px;line-height: 1px;background-color: #2687e6;width: 1px;">&#8203;</td>
+          </table>
+        </td>
+        <td class="border" style="padding: 0;vertical-align: top;font-size: 1px;line-height: 1px;width: 1px;background-color: #ffffff;">&#8203;</td>
       </tr>
     </tbody>
   </table>
 
-  <table class="footer centered" style="border-collapse: collapse;border-spacing: 0;margin-left: auto;margin-right: auto;width: 100%;">
+  <table class="footer centered" style="border-collapse: collapse;border-spacing: 0;background-color: #e5e7e5;margin-left: auto;margin-right: auto;width: 100%;">
     <tbody>
       <tr>
         <td style="padding: 0;vertical-align: top;">&nbsp;</td>
         <td class="inner" style="padding: 20px 0 29px 0;vertical-align: top;width: 600px;"><table class="left" style="border-collapse: collapse;border-spacing: 0;" align="left">
             <tbody>
               <tr>
-                <td style="padding: 0;vertical-align: top;color: #FFF;font-size: 15px; line-height: 22px;text-align: left;width: 400px;"><div class="address" style='font-family: "Lato",sans-serif;margin-bottom: 10px; '>
+                <td style="padding: 0;vertical-align: top;color: grey;font-size: 15px; line-height: 22px;text-align: left;width: 400px;"><div class="address" style='font-family: "Lato",sans-serif;margin-bottom: 10px; '>
                     <div>Plendit AS</div>
                   </div>
                   <div class="permission" style='font-family: "Lato",sans-serif; font-size: 12px;'>
-                    <div>Du mottar denne E-posten fordi du er bruker p&#229; Plendit.no</div>
+                    <div>Du mottar denne E-posten fordi du er bruker p&#229; Plendit.no. Denne eposten kan ikke svares på.</div>
                   </div>
-                  <div class="campaign" style='font-family: "Lato",sans-serif;margin-bottom: 18px; font-size: 12px;'> <span> <a style="transition: opacity 0.2s ease-in;color: #FFF;font-weight: bold;text-decoration: none;" href="http://dev.plendit.com/terms">Brukervilkår</a>  </div></td>
+                  <div class="campaign" style='font-family: "Lato",sans-serif;margin-bottom: 18px; font-size: 12px;'> <span> <a style="transition: opacity 0.2s ease-in;color: grey;font-weight: bold;text-decoration: none;" href="http://dev.plendit.com/terms">Brukervilkår</a>  </div></td>
               </tr>
             </tbody>
           </table></td>
