Update mail template - less blue more white.. and some grey

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -343,6 +343,7 @@ table.wrapper {
     padding-left: 20px;
     padding-right: 20px;
 }
+
 .three-col .third .padded {
     padding-left: 8px;
     padding-right: 32px;
@@ -748,7 +749,7 @@ font-style: normal;font-weight: 400;margin-bottom: 24px;margin-top: 0px;font-siz
           <table style="border-collapse: collapse;border-spacing: 0;" align="left">
             <tbody>
               <tr>
-                <td class="logo emb-logo-padding-box" style="padding: 0;vertical-align: top;mso-line-height-rule: at-least;width: 280px;padding-top: 24px;padding-bottom: 24px;padding-left:24px">
+                <td class="logo emb-logo-padding-box" style="padding: 0;vertical-align: top;mso-line-height-rule: at-least;width: 280px;padding-top: 24px;padding-bottom: 24px;padding-left:32px">
                   <div class="logo-left" style="font-weight: 700;font-family: Avenir,sans-serif;color: #555;font-size: 0px !important;line-height: 0 !important;" align="left" id="emb-email-header">
                     <%= image_tag attachments['logo.png'].url, size: '200x50', alt: '', style:'border: 0;-ms-interpolation-mode: bicubic;display: block;max-width: 200px;" src="plendit.png' -%>
                   </div>
@@ -759,7 +760,7 @@ font-style: normal;font-weight: 400;margin-bottom: 24px;margin-top: 0px;font-siz
       </tr>
     </tbody>
   </table>
-  <table class="border" style="border-collapse: collapse;border-spacing: 0;font-size: 1px;line-height: 1px;background-color: #ffffff;margin-left: auto;margin-right: auto;" width="602">
+  <table class="border" style="border-collapse: collapse;border-spacing: 0;font-size: 1px;line-height: 1px;background-color: #ffffff;margin-left: auto;margin-right: auto;" width="100%">
     <tbody>
       <tr>
         <td style="padding: 0;vertical-align: top;">&#8203;</td>
@@ -771,7 +772,7 @@ font-style: normal;font-weight: 400;margin-bottom: 24px;margin-top: 0px;font-siz
       <tr>
         <td class="border" style="padding: 0;vertical-align: top;font-size: 1px;line-height: 1px;width: 1px;background-color: #ffffff;">&#8203;</td>
         <td style="padding: 0;vertical-align: top;">
-        <table class="one-col" style="border-collapse: collapse;border-spacing: 0;margin-left: auto;margin-right: auto;width: 600px;background-color: #ffffff;table-layout: fixed;" emb-background-style>
+        <table class="one-col" style="border-collapse: collapse;border-spacing: 0;margin-left: auto;margin-right: auto;width: 100%;background-color: #ffffff;table-layout: fixed;" emb-background-style>
             <tbody>
               <tr>
                 <td class="column" style="padding: 0;vertical-align: top;text-align: left;"><div>
@@ -804,8 +805,8 @@ font-style: normal;font-weight: 400;margin-bottom: 24px;margin-top: 0px;font-siz
   <table class="footer centered" style="border-collapse: collapse;border-spacing: 0;background-color: #e5e7e5;margin-left: auto;margin-right: auto;width: 100%;">
     <tbody>
       <tr>
-        <td style="padding: 0;vertical-align: top;">&nbsp;</td>
-        <td class="inner" style="padding: 20px 0 29px 0;vertical-align: top;width: 600px;"><table class="left" style="border-collapse: collapse;border-spacing: 0;" align="left">
+        
+        <td class="inner" style="padding: 20px 0 29px 32px;vertical-align: top;width: 600px;"><table class="left" style="border-collapse: collapse;border-spacing: 0;" align="left">
             <tbody>
               <tr>
                 <td style="padding: 0;vertical-align: top;color: grey;font-size: 15px; line-height: 22px;text-align: left;width: 400px;"><div class="address" style='font-family: "Lato",sans-serif;margin-bottom: 10px; '>
