Use cropped images for front video on small screens

--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -4,7 +4,7 @@
     position: relative;
     z-index: 1;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: right;
     background-size: cover;
 
     &__splash {
