--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -1,4 +1,4 @@
-<section class="front-search-block" style="background-image: url(<%= @hero_video[:still] %>)">
+<section class="front-search-block" style="background-image: url(<%= @hero_video[:still_small] %>)">
     <div class="front-search-block__video-holder">
         <video preload="auto" class="front-search-block__video" data-controller="videoTrigger" poster="<%= @hero_video[:still] %>">
             <% unless @hero_video[:mp4].nil? %>
