Disable the 'submit for rewview' button when ad is not complete, and make 'edit' the call to action

--- a/app/assets/stylesheets/_ad_status_box.scss
+++ b/app/assets/stylesheets/_ad_status_box.scss
@@ -1,5 +1,12 @@
 @import 'constants.scss';
 
+
+.ad-status-box {
+    &__state-message {
+        padding: $standard-spacing;
+    }
+}
+
 /* hacky bits due to higher specificity of some default selectors in
    skeleton than the bem classes */
 .button {
