--- a/app/assets/stylesheets/_ad_status_box.scss
+++ b/app/assets/stylesheets/_ad_status_box.scss
@@ -1,66 +1,13 @@
 @import 'constants.scss';
 
-
 .ad-status-box {
     &__state-message {
         padding: $standard-spacing;
     }
-}
 
-/* hacky bits due to higher specificity of some default selectors in
-   skeleton than the bem classes */
-.button {
-    &.ad-status-box__button {
+    &__button {
         width: 200px;
         margin-left: 0.5rem;
         margin-right: 0.5rem;
-
-        &--blue {
-            color: white;
-            background-color: $color-plendit-blue;
-
-            &:hover, &:focus {
-              background-color: darken($color-plendit-blue, 5);
-            }
-            &:active {
-              background-color: darken($color-plendit-blue, 10);
-            }
-        }
-
-        &--yellow {
-            color: white;
-            background-color: $color-state-yellow;
-
-            &:hover, &:focus {
-              background-color: darken($color-state-yellow, 5);
-            }
-            &:active {
-              background-color: darken($color-state-yellow, 10);
-            }
-        }
-
-        &--red {
-            color: white;
-            background-color: $color-state-red;
-
-            &:hover, &:focus {
-              background-color: darken($color-state-red, 5);
-            }
-            &:active {
-              background-color: darken($color-state-red, 10);
-            }
-        }
-
-        &--green {
-            color: white;
-            background-color: $color-state-green;
-
-            &:hover, &:focus {
-              background-color: darken($color-state-green, 5);
-            }
-            &:active {
-              background-color: darken($color-state-green, 10);
-            }
-        }
     }
 }
