--- a/app/views/shared/_image_uploader.html.erb
+++ b/app/views/shared/_image_uploader.html.erb
@@ -1,4 +1,4 @@
-<div class="image-uploader" data-controller="imageUploader" data-image-path="<%= ad_image_ad_path(@ad, format: :json) %>">
+<div class="image-uploader" data-controller="imageUploader" data-image-path="<%= listing_image_ad_path(@ad, format: :json) %>">
     <script type="text/template" data-dropzone-template>
         <div class="image-uploader__thumb-holder">
             <img class="image-uploader__thumb" data-dz-thumbnail>
