@errors variable is a bit special. call it for @notices. Maybe this is a horrible idea? FIXME: some validations are done in the controller.

--- a/app/views/users/verify_boat_license.html.erb
+++ b/app/views/users/verify_boat_license.html.erb
@@ -36,7 +36,7 @@
                 </p>
 
 
-                <% @errors.each do |e| %>
+                <% @notices.each do |e| %>
                     <p><%= e %></p>
                 <% end %>
 
